force-app/main/default/objects/Business_Dossier__c/Business_Dossier__c.object-meta.xml
<CustomObject>
    <description>Information on a business establishment including information related to finance and structure.</description>
    <label>Business Dossier</label>
    <nameField>
        <label>Legal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Dossiers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>