force-app/main/default/objects/Business_Dossier__c/fields/Address_Correspondence__c.field-meta.xml
<CustomField>
    <fullName>Address_Correspondence__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A DutchBusinessFormattedAddress entry.</description>
    <label>Correspondence Address</label>
    <referenceTo>Dossier_Address__c</referenceTo>
    <relationshipLabel>Business Dossiers (Correspondence Address)</relationshipLabel>
    <relationshipName>Business_Dossiers1</relationshipName>
    <type>Lookup</type>
</CustomField>