force-app/main/default/objects/Business_Dossier__c/fields/Annual_Financial_Statement_Summary__c.field-meta.xml
<CustomField>
    <fullName>Annual_Financial_Statement_Summary__c</fullName>
    <description>Financial summary from the last known annual financial statement DutchBusinessAnnualFinancialStatementSummary.</description>
    <label>Annual_Financial Statement Summary</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>