force-app/main/default/objects/Business_Dossier__c/fields/Assets__c.field-meta.xml
<CustomField>
    <fullName>Assets__c</fullName>
    <description>The amount of assets for the financial year DutchBusinessMoneyV2</description>
    <label>Assets</label>
    <length>255</length>
    <type>Text</type>
</CustomField>