force-app/main/default/objects/Business_Dossier__c/fields/Authorized_Share_Capital__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Share_Capital__c</fullName>
    <description>Number indicating the amount of authorized share capital.  The amount of money for which the company is allowed to give out shares.  Dutch: `maatschappelijk kapitaal`.</description>
    <label>Authorized Share Capital</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>