force-app/main/default/objects/Business_Dossier__c/fields/Chamber_Code__c.field-meta.xml
<CustomField>
    <fullName>Chamber_Code__c</fullName>
    <label>Chamber of Commerce office</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>chamber_number</valueSetName>
    </valueSet>
</CustomField>