force-app/main/default/objects/Business_Dossier__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>The city the organisation resides in according to CreditSafe</description>
    <inlineHelpText>The city the organisation resides in according to CreditSafe</inlineHelpText>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>