force-app/main/default/objects/Business_Dossier__c/fields/Class_Personnel__c.field-meta.xml
<CustomField>
    <fullName>Class_Personnel__c</fullName>
    <description>A classification of the total number of employees (full-time and part-time).  Possible values:
1	no employees
2	1 employee
3	2 to 4 employees
4	5 to 9 employees
5	10 to 19 employees
6	20 to 49 employees
7	50 to 99 employees
8	100 to 199 employees
9	199 to 499 employees
10	500 to 749 employees
11	750 to 999 employees
12	1000 or more employees</description>
    <label>Classification Of Number Of Employees</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Class_Personnel</valueSetName>
    </valueSet>
</CustomField>