force-app/main/default/objects/Business_Dossier__c/fields/Class_Personnel_CI__c.field-meta.xml
<CustomField>
    <fullName>Class_Personnel_CI__c</fullName>
    <label>Number of Employees (Company.info)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Class_Personnel</valueSetName>
    </valueSet>
</CustomField>