force-app/main/default/objects/Business_Dossier__c/fields/Class_Personnel_Fulltime__c.field-meta.xml
<CustomField>
    <fullName>Class_Personnel_Fulltime__c</fullName>
    <label>Classification Of Fulltime Employees</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Class_Personnel</valueSetName>
    </valueSet>
</CustomField>