force-app/main/default/objects/Business_Dossier__c/fields/Company_Id__c.field-meta.xml
<CustomField>
    <fullName>Company_Id__c</fullName>
    <description>Creditsafe company identifier used to retrieve a report.</description>
    <label>Company Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>