force-app/main/default/objects/Business_Dossier__c/fields/Contact_Gender__c.field-meta.xml
<CustomField>
    <fullName>Contact_Gender__c</fullName>
    <label>Contact Gender</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>m</fullName>
                <label>Male</label>
            </value>
            <value>
                <fullName>f</fullName>
                <label>Female</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>