force-app/main/default/objects/Business_Dossier__c/fields/Contact_Initials__c.field-meta.xml
<CustomField>
    <fullName>Contact_Initials__c</fullName>
    <description>Initials of the contact</description>
    <label>Contact Initials</label>
    <length>255</length>
    <type>Text</type>
</CustomField>