force-app/main/default/objects/Business_Dossier__c/fields/Contact_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Contact_Prefix__c</fullName>
    <description>Name prefix of the contact.</description>
    <label>Contact Prefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>