force-app/main/default/objects/Business_Dossier__c/fields/Contact_Surname__c.field-meta.xml
<CustomField>
    <fullName>Contact_Surname__c</fullName>
    <description>Surname of the contact.</description>
    <label>Contact Surname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>