force-app/main/default/objects/Business_Dossier__c/fields/Contact_Title1__c.field-meta.xml
<CustomField>
    <fullName>Contact_Title1__c</fullName>
    <description>Title of the contact person of this business.</description>
    <label>Contact First Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>