force-app/main/default/objects/Business_Dossier__c/fields/Continuation_Date__c.field-meta.xml
<CustomField>
    <fullName>Continuation_Date__c</fullName>
    <description>The continuation date of the company, if applicable. This is usually the date that the company changed legal form.</description>
    <label>Continuation Date</label>
    <type>Date</type>
</CustomField>