force-app/main/default/objects/Business_Dossier__c/fields/Correspondence_Address__c.field-meta.xml
<CustomField>
    <fullName>Correspondence_Address__c</fullName>
    <description>A DutchBusinessFormattedAddress entry.</description>
    <label>Correspondence Address</label>
    <type>TextArea</type>
</CustomField>