force-app/main/default/objects/Business_Dossier__c/fields/Correspondence_City__c.field-meta.xml
<CustomField>
    <fullName>Correspondence_City__c</fullName>
    <label>Correspondence City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>