force-app/main/default/objects/Business_Dossier__c/fields/Correspondence_Country__c.field-meta.xml
<CustomField>
    <fullName>Correspondence_Country__c</fullName>
    <label>Correspondence Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>