force-app/main/default/objects/Business_Dossier__c/fields/Correspondence_House_Number__c.field-meta.xml
<CustomField>
    <fullName>Correspondence_House_Number__c</fullName>
    <label>Correspondence House Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>