force-app/main/default/objects/Business_Dossier__c/fields/Correspondence_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Correspondence_Postal_Code__c</fullName>
    <label>Correspondence Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>