force-app/main/default/objects/Business_Dossier__c/fields/Correspondence_Street__c.field-meta.xml
<CustomField>
    <fullName>Correspondence_Street__c</fullName>
    <label>Correspondence Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>