force-app/main/default/objects/Business_Dossier__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>The country this company is situated in according to CreditSafe</description>
    <inlineHelpText>The country this company is situated in according to CreditSafe</inlineHelpText>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>