force-app/main/default/objects/Business_Dossier__c/fields/Creditsafe_Id__c.field-meta.xml
<CustomField>
    <fullName>Creditsafe_Id__c</fullName>
    <description>The unique credit safe Id. Only filled for records retrieved through Credit Safe.</description>
    <externalId>true</externalId>
    <label>Creditsafe Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>