force-app/main/default/objects/Business_Dossier__c/fields/Date_of_Last_Account__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_Account__c</fullName>
    <label>Date of Last Account</label>
    <type>DateTime</type>
</CustomField>