force-app/main/default/objects/Business_Dossier__c/fields/Domain_Name__c.field-meta.xml
<CustomField>
    <fullName>Domain_Name__c</fullName>
    <description>The internet domain name registered by the business</description>
    <label>Domain Name</label>
    <type>Url</type>
</CustomField>