force-app/main/default/objects/Business_Dossier__c/fields/Establishment_Address__c.field-meta.xml
<CustomField>
    <fullName>Establishment_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A DutchBusinessFormattedAddress entry.</description>
    <label>Establishment Address</label>
    <referenceTo>Dossier_Address__c</referenceTo>
    <relationshipLabel>Business Dossiers</relationshipLabel>
    <relationshipName>Business_Dossiers</relationshipName>
    <type>Lookup</type>
</CustomField>