force-app/main/default/objects/Business_Dossier__c/fields/Establishment_City__c.field-meta.xml
<CustomField>
    <fullName>Establishment_City__c</fullName>
    <label>Establishment City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>