force-app/main/default/objects/Business_Dossier__c/fields/Establishment_Date__c.field-meta.xml
<CustomField>
    <fullName>Establishment_Date__c</fullName>
    <description>The date the establishment started its activities.  This date does not change when the establishment moves to another location.</description>
    <label>Establishment Date</label>
    <type>Date</type>
</CustomField>