force-app/main/default/objects/Business_Dossier__c/fields/Establishment_House_Number__c.field-meta.xml
<CustomField>
    <fullName>Establishment_House_Number__c</fullName>
    <label>Establishment House Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>