force-app/main/default/objects/Business_Dossier__c/fields/Establishment_Number__c.field-meta.xml
<CustomField>
<fullName>Establishment_Number__c</fullName>
<description>The unique identifier for this business establishment, consisting of 12 numbers (e.g.  012345678912).  Optional.  Some businesses, mainly foundations (`Stichting`), do not have establishments.  In these instances the establishment_number is not returned.</description>
<label>Establishment Number</label>
<length>255</length>
<type>Text</type>
</CustomField>