force-app/main/default/objects/Business_Dossier__c/fields/Establishment_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Establishment_Postal_Code__c</fullName>
    <label>Establishment Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>