force-app/main/default/objects/Business_Dossier__c/fields/Establishment_street__c.field-meta.xml
<CustomField>
    <fullName>Establishment_street__c</fullName>
    <label>Establishment street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>