force-app/main/default/objects/Business_Dossier__c/fields/House_Number__c.field-meta.xml
<CustomField>
    <fullName>House_Number__c</fullName>
    <description>The house number of the address the organisation resides according to CreditSafe</description>
    <inlineHelpText>The house number of the address the organisation resides according to CreditSafe</inlineHelpText>
    <label>House Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>