force-app/main/default/objects/Business_Dossier__c/fields/Indication_Bankruptcy__c.field-meta.xml
<CustomField>
    <fullName>Indication_Bankruptcy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean indicating if the business is currently registered as bankrupt (Dutch: ‘Faillissement’).</description>
    <label>Indication Bankruptcy</label>
    <type>Checkbox</type>
</CustomField>