force-app/main/default/objects/Business_Dossier__c/fields/Indication_Dip__c.field-meta.xml
<CustomField>
    <fullName>Indication_Dip__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean indicating if the business is currently registered as Debtor-in-Possession (Dutch: ‘in Surseance’).</description>
    <label>Debtor in possession</label>
    <type>Checkbox</type>
</CustomField>