force-app/main/default/objects/Business_Dossier__c/fields/Indication_Economically_Active__c.field-meta.xml
<CustomField>
    <fullName>Indication_Economically_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean indicating if the business is economically active. This indication is determined by a formula developed by the ‘Vereninging Kamers van Koophandel’. This should not be interpreted as an indication of whether the business is currently still registered at the Chamber of Commerce: only currently registered businesses are available through our services.</description>
    <label>Economically Active</label>
    <type>Checkbox</type>
</CustomField>