force-app/main/default/objects/Business_Dossier__c/fields/Indication_Export__c.field-meta.xml
<CustomField>
    <fullName>Indication_Export__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indication of whether the company does export.  Optional.</description>
    <label>Exports</label>
    <type>Checkbox</type>
</CustomField>