force-app/main/default/objects/Business_Dossier__c/fields/Indication_Import__c.field-meta.xml
<CustomField>
    <fullName>Indication_Import__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indication of whether the company does import.  Optional.</description>
    <label>Imports</label>
    <type>Checkbox</type>
</CustomField>