force-app/main/default/objects/Business_Dossier__c/fields/Indication_Main_Establishment__c.field-meta.xml
<CustomField>
    <fullName>Indication_Main_Establishment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean indicating if this is the main establishment of the business.</description>
    <label>Main Establishment</label>
    <type>Checkbox</type>
</CustomField>