force-app/main/default/objects/Business_Dossier__c/fields/Insolvencies__c.field-meta.xml
<CustomField>
    <fullName>Insolvencies__c</fullName>
    <description>Array of DutchBusinessInsolvency entries containing data about the insolvencies.  [optional]</description>
    <label>Insolvencies</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>