force-app/main/default/objects/Business_Dossier__c/fields/Is_Removed__c.field-meta.xml
<CustomField>
    <fullName>Is_Removed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True, if removed from Company.info server</description>
    <label>Is Removed</label>
    <type>Checkbox</type>
</CustomField>