force-app/main/default/objects/Business_Dossier__c/fields/Issued_Share_Capital__c.field-meta.xml
<CustomField>
    <fullName>Issued_Share_Capital__c</fullName>
    <label>Issued Share Capital</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>