force-app/main/default/objects/Business_Dossier__c/fields/Issued_Share_Capital_Currency__c.field-meta.xml
<CustomField>
    <fullName>Issued_Share_Capital_Currency__c</fullName>
    <label>Currency For Issued Share Capital</label>
    <length>20</length>
    <type>Text</type>
</CustomField>