force-app/main/default/objects/Business_Dossier__c/fields/Legal_Form_Code__c.field-meta.xml
<CustomField>
    <fullName>Legal_Form_Code__c</fullName>
    <description>Registered legal form used by the organisation.
See Legal_Form_Text for text description.</description>
    <label>Legal Form Code</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>