force-app/main/default/objects/Business_Dossier__c/fields/Legal_Form_Text__c.field-meta.xml
<CustomField>
    <fullName>Legal_Form_Text__c</fullName>
    <description>Description of the legal form (in Dutch).</description>
    <label>Legal Form</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Eenmanszaak</fullName>
            </value>
            <value>
                <fullName>Eenmanszaak met meer dan één eigenaar</fullName>
            </value>
            <value>
                <fullName>NV / BV in oprichting op A-formulier</fullName>
            </value>
            <value>
                <fullName>Rederij</fullName>
            </value>
            <value>
                <fullName>Maatschap</fullName>
            </value>
            <value>
                <fullName>Vennootschap onder firma</fullName>
            </value>
            <value>
                <fullName>NV / BV in oprichting op B-formulier</fullName>
            </value>
            <value>
                <fullName>Commanditaire Vennootschap met één beherende vennoot</fullName>
            </value>
            <value>
                <fullName>Commanditaire Vennootschap met meer dan één beherende vennoot</fullName>
            </value>
            <value>
                <fullName>NV / BV in oprichting op D-formulier</fullName>
            </value>
            <value>
                <fullName>Rechtspersoon in oprichting</fullName>
            </value>
            <value>
                <fullName>Besloten Vennootschap met gewone structuur</fullName>
            </value>
            <value>
                <fullName>Besloten Vennootschap blijkens statuten structuurvennootschap</fullName>
            </value>
            <value>
                <fullName>Naamloze Vennootschap met gewone structuur</fullName>
            </value>
            <value>
                <fullName>Naamloze Vennootschap blijkens statuten structuurvennootschap</fullName>
            </value>
            <value>
                <fullName>Naamloze Vennootschap beleggingsmaatschappij met veranderlijk kapitaal</fullName>
            </value>
            <value>
                <fullName>NV beleggingsmaatschappij met veranderlijk kapitaal blijkens statuten structuurvennootschap</fullName>
            </value>
            <value>
                <fullName>Europese naamloze vennootschap (SE)</fullName>
            </value>
            <value>
                <fullName>Europese naamloze vennootschap (SE) blijkens statuten structuurvennootschap</fullName>
            </value>
            <value>
                <fullName>Coöperatie U.A. met gewone structuur</fullName>
            </value>
            <value>
                <fullName>Coöperatie U.A. blijkens statuten structuurcoöperatie</fullName>
            </value>
            <value>
                <fullName>Coöperatie W.A. met gewone structuur</fullName>
            </value>
            <value>
                <fullName>Coöperatie W.A. blijkens statuten structuurcoöperatie</fullName>
            </value>
            <value>
                <fullName>Coöperatie B.A. met gewone structuur</fullName>
            </value>
            <value>
                <fullName>Coöperatie B.A. blijkens statuten structuurcoöperatie</fullName>
            </value>
            <value>
                <fullName>Vereniging van Eigenaars</fullName>
            </value>
            <value>
                <fullName>Vereniging met volledige rechtsbevoegdheid</fullName>
            </value>
            <value>
                <fullName>Vereniging met beperkte rechtsbevoegdheid</fullName>
            </value>
            <value>
                <fullName>Kerkgenootschap</fullName>
            </value>
            <value>
                <fullName>Stichting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>