force-app/main/default/objects/Business_Dossier__c/fields/Main_Establishment_Number__c.field-meta.xml
<CustomField>
<fullName>Main_Establishment_Number__c</fullName>
<description>The establishment number for the main establishment of the business.  Optional.</description>
<label>Main Establishment Number</label>
<length>255</length>
<type>Text</type>
</CustomField>