force-app/main/default/objects/Business_Dossier__c/fields/No_VAT_Number__c.field-meta.xml
<CustomField>
    <fullName>No_VAT_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Internal field which returns true if there is no VAT number found in the CI backend for Dutch dossiers. For non-Dutch dossiers, Dutch dossiers for which the VAT number has not been checked yet and Dutch dossiers with a VAT number this should return false.</description>
    <label>No VAT Number Known</label>
    <type>Checkbox</type>
</CustomField>