force-app/main/default/objects/Business_Dossier__c/fields/Number_Of_Subsidiaries__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Subsidiaries__c</fullName>
    <description>The number of subsidiaries this organization controls.</description>
    <label>Number Of Subsidiaries</label>
    <length>255</length>
    <type>Text</type>
</CustomField>