force-app/main/default/objects/Business_Dossier__c/fields/Office_Type__c.field-meta.xml
<CustomField>
    <fullName>Office_Type__c</fullName>
    <label>Office Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>