force-app/main/default/objects/Business_Dossier__c/fields/Paid_Up_Share_Capital__c.field-meta.xml
<CustomField>
    <fullName>Paid_Up_Share_Capital__c</fullName>
    <label>Paid Up Share Capital</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>