force-app/main/default/objects/Business_Dossier__c/fields/Parent_Chamber_Of_Commerce_Number__c.field-meta.xml
<CustomField>
    <fullName>Parent_Chamber_Of_Commerce_Number__c</fullName>
    <description>The Chamber of Commerce number of the immediate parent organization.</description>
    <label>Parent Chamber Of Commerce Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>