force-app/main/default/objects/Business_Dossier__c/fields/Personnel__c.field-meta.xml
<CustomField>
    <fullName>Personnel__c</fullName>
    <label>Number Of Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>