force-app/main/default/objects/Business_Dossier__c/fields/Personnel_Fulltime__c.field-meta.xml
<CustomField>
    <fullName>Personnel_Fulltime__c</fullName>
    <label>Number of Fulltime Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>