force-app/main/default/objects/Business_Dossier__c/fields/Personnel_Reference_Date__c.field-meta.xml
<CustomField>
    <fullName>Personnel_Reference_Date__c</fullName>
    <description>The reference date (peildatum) of the number of employees.</description>
    <label>Reference Date Of Number Of Employees</label>
    <type>Date</type>
</CustomField>