force-app/main/default/objects/Business_Dossier__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <description>The postal code this organisation resides according to CreditSafe</description>
    <inlineHelpText>The postal code this organisation resides according to CreditSafe</inlineHelpText>
    <label>Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>