force-app/main/default/objects/Business_Dossier__c/fields/Primary_Sbi_Code__c.field-meta.xml
<CustomField>
    <fullName>Primary_Sbi_Code__c</fullName>
    <label>Primary SBI Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>