force-app/main/default/objects/Business_Dossier__c/fields/Profit__c.field-meta.xml
<CustomField>
    <fullName>Profit__c</fullName>
    <description>The profit realised in the financial year DutchBusinessMoneyV2</description>
    <label>Profit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>