force-app/main/default/objects/Business_Dossier__c/fields/Registration_Country__c.field-meta.xml
<CustomField>
    <fullName>Registration_Country__c</fullName>
    <inlineHelpText>The country in which this organisation has been registered</inlineHelpText>
    <label>Registration Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Registration_Countries</valueSetName>
    </valueSet>
</CustomField>