force-app/main/default/objects/Business_Dossier__c/fields/Secondary_Sbi_Code_1_Text__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Sbi_Code_1_Text__c</fullName>
    <label>Secondary SBI Code Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>