force-app/main/default/objects/Business_Dossier__c/fields/Secondary_Sbi_Code_2_Text__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Sbi_Code_2_Text__c</fullName>
    <label>Secondary SBI Code 2 Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>