force-app/main/default/objects/Business_Dossier__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Import</fullName>
            </value>
            <value>
                <fullName>Export</fullName>
            </value>
            <value>
                <fullName>Economically Active</fullName>
            </value>
            <value>
                <fullName>Non Mailing</fullName>
            </value>
            <value>
                <fullName>Bankruptcy</fullName>
            </value>
            <value>
                <fullName>DIP</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Active, NonActive</fullName>
            </value>
            <value>
                <fullName>NonActive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>